# nockchain

./: .gitlab-ci.yml  ARCHITECTURE.md  Cargo.toml  DOC_INVENTORY.md  Makefile  PROTOCOL.md  README.md  START_HERE.md  WORKFLOWS.md  flake.nix
.github/workflows/: create-sync-pr.yml  docs.yml  sync-to-nockchain.yml
DECISIONS/: 0001-doc-spine-and-authority.md  0002-protocol-first-canonicalization.md  README.md  TEMPLATE.md
changelog/protocol/: 001-legacy-checkpoint-144.md  002-legacy-checkpoints-genesis-720.md  003-legacy-checkpoint-2448.md  004-legacy-sign-output-source.md  005-legacy-checkpoint-4032.md  006-legacy-proof-v1-6750.md  007-legacy-proof-v2-12000.md  008-legacy-checkpoint-16128.md  009-legacy-segwit-cutover-initial.md  010-legacy-v1-phase-39000.md  011-legacy-lmp-axis-hotfix.md  012-bythos.md  013-nous.md  SPECIFICATION.md
crates/bridge/: .gitignore  Cargo.toml  README.md  bridge-conf.example.toml  build.rs
crates/bridge/contracts/: .env.template  DEPLOYMENT.md  Makefile  MessageInbox.sol  Nock.sol  UPGRADE_GUIDE.md  foundry.toml  remappings.txt  tenderly.env.example  tenderly.yaml
crates/bridge/contracts/docs/: UPGRADE_GUIDE.md
crates/bridge/contracts/environments/: base-sepolia-testnet-accounts.md  base-sepolia.example  devnet.example
crates/bridge/contracts/forge/: Deploy.s.sol  IntegrationTest.s.sol  MintAndBurn.s.sol  SetBridgeNodes.s.sol  Upgrade.s.sol  Validate.s.sol
crates/bridge/contracts/test/: BridgeTestBase.t.sol  MessageInboxBridgeNodeTest.t.sol  MessageInboxDepositTest.t.sol  MessageInboxFuzzTest.t.sol  MessageInboxUpgradeTest.t.sol  NockWithdrawalTest.t.sol
crates/bridge/docs/: README.md  architecture.md  bridge-withdrawals.md  governance.md  node-runbook.md  sans-io-architecture.md  signatures.md  withdrawal-dapp.md
crates/bridge/proto/: bridge_ingress.proto  bridge_status.proto  bridge_tui.proto
crates/bridge/src/: bridge_status.rs  config.rs  deposit_log.rs  errors.rs  ethereum.rs  grpc.rs  health.rs  ingress.rs  lib.rs  loop_policy.rs  main.rs  metrics.rs  nockchain.rs  ports.rs  proposal_cache.rs  proposer.rs  runtime.rs  schema.rs  signing.rs  status.rs  stop.rs  tui_api.rs  tui_client.rs  types.rs
crates/bridge/src/core/: base_observer.rs  mod.rs  nock_observer.rs  posting.rs  signing.rs
crates/bridge/src/tui/: clipboard.rs  mod.rs  state.rs  types.rs
crates/bridge/src/tui/panels/: alerts.rs  deposit_log.rs  health.rs  mod.rs  network_state.rs  proposals.rs  transactions.rs
crates/bridge/src/tui/widgets/: help_overlay.rs  mod.rs  status_bar.rs
crates/bridge/tests/: config_tests.rs  core_runner_integration.rs  failover_tests.rs  logging_tests.rs  loop_policy_shell_tests.rs  loop_tick_tests.rs  test_harness.rs
crates/bridge/tests/harness/: in_memory_ports.rs
crates/chaff/: Cargo.toml
crates/chaff/benches/: jam_checkpoint.rs
crates/chaff/src/: lib.rs
crates/habit/: Cargo.toml
crates/habit/src/: lib.rs
crates/hoonc/: README.md
crates/kernels/: Cargo.toml
crates/kernels/bridge/: Cargo.toml  build.rs
crates/kernels/dumb/: Cargo.toml  build.rs
crates/kernels/miner/: Cargo.toml  build.rs
crates/nockapp/: Cargo.toml  README.md
crates/nockapp-grpc-proto/: Cargo.toml  build.rs
crates/nockapp-grpc-proto/src/v2/: convert.rs
crates/nockapp/src/: observability.rs
crates/nockapp/src/kernel/: boot.rs  form.rs
crates/nockapp/src/nockapp/: mod.rs  save.rs  test.rs
crates/nockapp/src/nockapp/actors/: save.rs
crates/nockapp/src/noun/: slab.rs
crates/nockapp/src/utils/: error.rs
crates/nockchain/: Cargo.toml
crates/nockchain-api/: Cargo.toml  README.md
crates/nockchain-api/src/: main.rs
crates/nockchain-explorer-tui/: Cargo.toml  README.md
crates/nockchain-explorer-tui/src/: main.rs
crates/nockchain-libp2p-io/: Cargo.toml
crates/nockchain-libp2p-io/src/: cbor_tests.rs  driver.rs
crates/nockchain-libp2p-io/testdata/: README.md  req_res_gen1_cbor_vectors.json
crates/nockchain-math/: Cargo.toml
crates/nockchain-math/src/: belt.rs  lib.rs  owned_based_noun.rs  poly.rs
crates/nockchain-math/src/zoon/: common.rs  zmap.rs  zset.rs
crates/nockchain-peek/: Cargo.toml
crates/nockchain-peek/src/: main.rs
crates/nockchain-types/: Cargo.toml
crates/nockchain-types/jams/: README.md
crates/nockchain-types/jams/v1/: raw-tx-word-count-oracle.jam  raw-tx.jam
crates/nockchain-types/src/: blockchain_constants.rs  lib.rs
crates/nockchain-types/src/tx_engine/common/: mod.rs  page.rs
crates/nockchain-types/src/tx_engine/v0/: note.rs  tx.rs
crates/nockchain-types/src/tx_engine/v1/: hashable.rs  mod.rs  note.rs  tx.rs
crates/nockchain-types/src/tx_engine/v1/hashable/: noun.rs
crates/nockchain-types/tests/: raw_tx_from_jam_v1.rs
crates/nockchain-wallet/: Cargo.toml  README.md
crates/nockchain-wallet/src/: command.rs  connection.rs  create_tx.rs  main.rs  recipient.rs  tests.rs
crates/nockchain/jams/: fakenet-genesis-pow-2-bex-4.jam
crates/nockchain/src/: config.rs  lib.rs  main.rs  mining.rs  setup.rs
crates/nockchain/tests/: open_prover_bench.rs
crates/nockup/: README.md
crates/nockvm/: DEVELOPERS.md  README.md
crates/nockvm/rust/ibig/: Cargo.toml
crates/nockvm/rust/ibig/src/: memory.rs
crates/nockvm/rust/ibig/tests/: bytehound_allocations.rs
crates/noun-serde-derive/: Cargo.toml
crates/noun-serde-derive/src/: lib.rs
crates/noun-serde-derive/tests/: tagged_union_lock.rs  untagged_enum.rs
crates/wallet-tx-builder/: Cargo.toml
crates/wallet-tx-builder/src/: adapter.rs  determinism.rs  fee.rs  lib.rs  lock_resolver.rs  note_data.rs  planner.rs  types.rs  word_count.rs
crates/wallet-tx-builder/tests/fixtures/: README.md  note_data_fixtures.jam
crates/zkvm-jetpack/: Cargo.toml
crates/zkvm-jetpack/src/: hot.rs
crates/zkvm-jetpack/src/jets/: bp_jets.rs  fp_jets.rs  fpntt_jets.rs  mod.rs  proof_gen_jets.rs  tip5_jets.rs  verifier_jets.rs  zoon_jets.rs
hoon/common/: tx-engine-0.hoon  tx-engine-1.hoon  tx-engine.hoon
scripts/docs/: check_canonical_links.sh  check_docs_metadata.sh
tools/sync_to_staging/: copy.bara.sky  sync_to_staging.sh
(+65 files in other folders)
