[package]
name = "nockchain-explorer-tui"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "nockchain-explorer-tui"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
arboard = "3.3"
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
crossterm = { workspace = true }
nockapp-grpc-proto = { workspace = true }
nockchain-math = { workspace = true }
nockchain-types = { workspace = true }
ratatui = "0.28"
rustls = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-tracy = { workspace = true }
