[package]
name = "nockchain-math"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
argon2.workspace = true
arrayref.workspace = true
bs58.workspace = true
bytes.workspace = true
either.workspace = true
ibig.workspace = true
nockvm.workspace = true
nockvm_macros.workspace = true
noun-serde.workspace = true
num-traits.workspace = true
once_cell.workspace = true
quickcheck.workspace = true
rkyv.workspace = true
serde = { workspace = true, features = ["derive"], default-features = false }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
quickcheck.workspace = true
