[package]
name = "nockchain-peek"
publish = false
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
kernels-open-nockchain-peek = { workspace = true }
nockapp.workspace = true
nockapp-grpc = { workspace = true }
nockvm = { workspace = true }
nockvm_macros = { workspace = true }
rustls.workspace = true

tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
zkvm-jetpack.workspace = true
