[package]
name = "nockchain-wallet"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]

bs58 = { workspace = true }
clap = { workspace = true, features = ["derive", "cargo"] }
crossterm.workspace = true
either.workspace = true
getrandom.workspace = true
http = "1"
kernels-open-wallet = { workspace = true }
nockapp = { workspace = true }
nockapp-grpc = { workspace = true }
nockchain-math = { workspace = true }
nockchain-types = { workspace = true }
nockvm = { workspace = true }
nockvm_macros = { workspace = true }
noun-serde = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile.workspace = true
termimad.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wallet-tx-builder = { path = "../wallet-tx-builder" }
zkvm-jetpack = { workspace = true }
