[package]
name = "nockchain"
build = "build.rs"
publish = false
version.workspace = true
edition.workspace = true

[features]
bazel_build = []
jemalloc = ["tikv-jemallocator"]
tracing-heap = ["tikv-jemallocator", "tracy-client"]

[dependencies]

bs58.workspace = true
chaff.workspace = true
clap.workspace = true
equix.workspace = true
futures.workspace = true
ibig.workspace = true
kernels-open-dumb = { workspace = true }
kernels-open-miner = { workspace = true }
libp2p = { workspace = true, features = [
    "ping",
    "kad",
    "identify",
    "quic",
    "tls",
    "dns",
    "tokio",
    "macros",
    "request-response",
    "cbor",
] }
nockapp.workspace = true
nockapp-grpc.workspace = true
nockchain-libp2p-io.workspace = true
nockchain-math.workspace = true
nockchain-types.workspace = true
nockvm.workspace = true
nockvm_macros.workspace = true
noun-serde.workspace = true
num_cpus = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
termcolor.workspace = true
tikv-jemallocator = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracy-client = { workspace = true, optional = true }

zkvm-jetpack.workspace = true
