[package]
name = "noun-serde-derive"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
nockvm = { workspace = true }

proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
tracing.workspace = true

[dev-dependencies]
nockapp.workspace = true
nockvm_macros.workspace = true
noun-serde.workspace = true
