[package]
name = "zkvm-jetpack"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
argon2.workspace = true
bitvec.workspace = true
bs58.workspace = true
bytes.workspace = true
either.workspace = true
hex-literal.workspace = true
ibig.workspace = true
nockchain-math.workspace = true
nockchain-types.workspace = true
nockvm.workspace = true
nockvm_macros.workspace = true
noun-serde.workspace = true
num-traits.workspace = true
once_cell.workspace = true
quickcheck.workspace = true
rayon.workspace = true
strum.workspace = true
tracing.workspace = true

[dev-dependencies]
quickcheck.workspace = true
