[package]
name = "ibig"
version = "0.3.6"
authors = ["Tomek Czajka <tczajka@gmail.com>"]
edition = "2021"
rust-version = "1.87.0"
description = "A big integer library with good performance"
keywords = ["bigint", "bignum", "mathematics", "modular", "modulo"]
categories = ["mathematics", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tczajka/ibig-rs"
homepage = "https://github.com/tczajka/ibig-rs"
readme = "README.md"
exclude = ["generate_coverage.sh"]

[package.metadata.docs.rs]
all-features = true

[lib]
bench = false
test = false
doctest = false

[features]
default = ["std", "rand", "num-traits"]

# Interface with the std library.
std = []

[dependencies.cfg-if]
workspace = true

[dependencies.num-traits]
optional = true
version = "0.2"

[dependencies.rand]
optional = true
version = "0.9.2"

[dependencies.serde]
features = ["derive"]
optional = true
version = "1.0.217"

[dependencies.static_assertions]
workspace = true

[dev-dependencies.criterion]
workspace = true
features = ["html_reports"]

[dev-dependencies.rand]
workspace = true

[lints.clippy]
missing_safety_doc = "allow"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(force_bits, values("16","32","64"))',
] }

[[bench]]
name = "benchmarks"
required-features = ["rand"]
harness = false
